--- a/clash/clash-for-Android.yaml
+++ b/clash/clash-for-Android.yaml
@@ -4,13 +4,7 @@ p: &p
   interval: 1800 # 更新 provider 的时间，单位为秒
   health-check:  # 健康检查（测试延迟）
     enable: true # 是否启用，可选 true/false
-    # 健康检查地址，推荐使用以下地址之一
-    # Cloudflare:
-    # https://cp.cloudflare.com/generate_204
-    # Google：
-    # http://www.gstatic.com/generate_204
-    # https://www.gstatic.com/generate_204
-    url: https://www.gstatic.com/generate_204
+    url: https://www.gstatic.com/generate_204 # 健康检查地址
     interval: 300 # 健康检查间隔时间，单位为秒
 
 # # proxy 相关
@@ -63,6 +57,7 @@ proxy-providers:
       enable: true
       url: https://www.gstatic.com/generate_204
       interval: 300
+
 mode: rule
 ipv6: true
 log-level: silent
@@ -73,6 +68,8 @@ tcp-concurrent: true
 external-controller-tls: 127.0.0.1:9999
 find-process-mode: strict
 global-client-fingerprint: chrome
+unified-delay: true # 更换延迟计算方式,去除握手等额外延迟,可选值 true/false
+tcp-concurrent: true #TCP并发,可选值 true/false
 
 sniffer:
   enable: true
@@ -215,9 +212,6 @@ dns:
  nameserver:
     - 'https://223.5.5.5/dns-query#h3=true'
     - https://1.12.12.12/dns-query
-
-unified-delay: true # 更换延迟计算方式,去除握手等额外延迟,可选值 true/false
-tcp-concurrent: true #TCP并发,可选值 true/false
 
 rule-anchor:
   ip: &ip
