--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -211,7 +211,7 @@ payload:
   - DOMAIN-SUFFIX,argotunnel.com
   - DOMAIN-SUFFIX,opensubtitles.com
 
-#  - DOMAIN-SUFFIX,000719.xyz
+  - DOMAIN-SUFFIX,000719.xyz
   - IP-CIDR,107.173.199.239/25
   - IP-CIDR,152.53.239.88/22
   - IP-CIDR,188.68.51.136/24
