更新 clash_proxy.yaml

--- a/clash/clash_proxy.yaml
+++ b/clash/clash_proxy.yaml
@@ -32,6 +32,7 @@ payload:
   - DOMAIN-SUFFIX,googleapis.cn
   - DOMAIN-SUFFIX,fanart.tv
   - DOMAIN-SUFFIX,dler.cloud
+  - DOMAIN-SUFFIX,ymawv.la
 
   - DOMAIN,airav.io
   - DOMAIN,freejavbt.com
