--- a/clash/clash_proxy.yaml
+++ b/clash/clash_proxy.yaml
@@ -33,6 +33,7 @@ payload:
   - DOMAIN-SUFFIX,fanart.tv
   - DOMAIN-SUFFIX,dler.cloud
   - DOMAIN-SUFFIX,ymawv.la
+   - DOMAIN-SUFFIX,ffaoa.com
 
   - DOMAIN,airav.io
   - DOMAIN,freejavbt.com
