--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -214,6 +214,7 @@ payload:
   - DOMAIN-REGEX,^javdb\d+\.com$
 
   - DOMAIN-SUFFIX,000719.xyz
+  - IP-CIDR,114.134.184.198/25
   - IP-CIDR,107.173.199.239/25
   - IP-CIDR,152.53.239.88/22
   - IP-CIDR,188.68.51.136/24
