--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -82,6 +82,7 @@ payload:
   - DOMAIN-SUFFIX,cgpeers.com
   - DOMAIN-SUFFIX,chdbits.co
   - DOMAIN-SUFFIX,chddiy.xyz
+  - DOMAIN-SUFFIX,chdbits.xyz
   - DOMAIN-SUFFIX,cinemageddon.net
   - DOMAIN-SUFFIX,cinematik.net
   - DOMAIN-SUFFIX,cinemaz.to
