--- a/clash/clash_proxy.yaml
+++ b/clash/clash_proxy.yaml
@@ -41,6 +41,7 @@ payload:
   - DOMAIN,www.avbase.net
   - DOMAIN,www.jav321.com
   - DOMAIN,7mmtv.sx
+  - DOMAIN,tu.ymawv.la
 
   - IP-CIDR,107.173.199.239/25
   - IP-CIDR,124.244.194.192/24
