更新 clash_proxy.yaml

--- a/clash/clash_proxy.yaml
+++ b/clash/clash_proxy.yaml
@@ -42,6 +42,7 @@ payload:
   - DOMAIN,www.jav321.com
   - DOMAIN,7mmtv.sx
   - DOMAIN,tu.ymawv.la
+  - DOMAIN,ttou.j03og.app
 
   - IP-CIDR,107.173.199.239/25
   - IP-CIDR,124.244.194.192/24
