更新 clash_direct.yaml

--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -221,6 +221,8 @@ payload:
   - DOMAIN-SUFFIX,deepseek.com
   - DOMAIN,api.tunefree.fun
   - DOMAIN,music-dl.sayqz.com
+  - DOMAIN,tu.ymawv.la
+  - DOMAIN,ttou.j03og.app
 
   - DOMAIN-REGEX,^javdb\d+\.com$
 
