更新 clash_direct.yaml

--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -226,7 +226,7 @@ payload:
   - DOMAIN-SUFFIX,66666.host
   - DOMAIN-SUFFIX,aliyuncs.com
 
-  - DOMAIN-R- DOMAIN-SUFFIX,EGEX,^javdb\d+\.com$
+  - DOMAIN-REGEX,^javdb\d+\.com$
 
   - DOMAIN-SUFFIX,000719.xyz
   - IP-CIDR,114.134.184.198/25
