更新 clash_direct.yaml

--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -226,6 +226,7 @@ payload:
   - DOMAIN-SUFFIX,66666.host
   - DOMAIN-SUFFIX,aliyuncs.com
   - DOMAIN-SUFFIX,qoder.sh
+  - DOMAIN-SUFFIX,qoder.com
 
   - DOMAIN-REGEX,^javdb\d+\.com$
 
