--- a/clash/clash_direct.yaml
+++ b/clash/clash_direct.yaml
@@ -232,6 +232,7 @@ payload:
   - DOMAIN-REGEX,^javdb\d+\.com$
 
   - DOMAIN-SUFFIX,000719.xyz
+  - DOMAIN-SUFFIX,355566.xyz
   - IP-CIDR,114.134.184.198/25
   - IP-CIDR,107.173.199.239/25
   - IP-CIDR,152.53.239.88/22
